added the export RenderLetter function to the SendLetterButton module

--- a/src/styles/render.css
+++ b/src/styles/render.css
@@ -32,3 +32,15 @@ h3 {
 .sendLetter {
     margin-top: 20px;
 }
+
+.button {
+    margin-top: 40px;
+}
+
+.letterButton {
+    margin-top: 40px;
+}
+
+h2 {
+    font-weight: 1000;
+}
